# skill-flywheel

./: .clinerules  .coverage  .env.example  .gitattributes  .gitignore  .ruffignore  AGENTS.md  Agent_Skills_Development_Guide.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  FINAL_ACHIEVEMENT_REPORT.md  FINAL_COMPLETION_REPORT.md  LICENSE  QUICK_START.md  README.md  ROOT_DIRECTORY_CLEANUP_SUMMARY.md  SKILLS_APPENDIX.md  SOFTWARE_QUALITY_AUDIT_REPORT.json  SPELLBOOK.md  add_required_sections.py  assess_skills.py  audit_criteria.md  audit_findings.md  batch_repair_skills.py  check_db.py  check_high_reasoning.py  check_high_reasoning_db.py  check_module_paths.py  check_probabilistic.py  check_skill.py  check_skills.py  check_specific_skill.py  ci_pytest.txt  count_skills.py  coverage.json  coverage.xml  debug_discover.py  demo_skills.py  (+45 more)
.context/: decisions.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.kilo/plans/: 1775213946841-glowing-orchid.md  1775424510575-nimble-pixel.md  (+3 more)
.rl4/: .gitignore  evidence.md  timeline.md
.test_sessions/: 009c0ded955c.json  0e26392ca0df.json  148a72ae4a8a.json  17e36b0b2bdd.json  198176a44e2f.json  1db23e565ee8.json  221a9c223aa6.json  2a5f5ccbc7f2.json  35737dc6ee39.json  411ebfcbed86.json  47357b52d680.json  49edf1de9bdd.json  4a916aa01603.json  4ae18500c450.json  4b6289becebc.json  51cc8c248b5d.json  53a487c8b44f.json  5875b40ec8ca.json  5bdb1976685f.json  5e81022b4e53.json  6162a947ee8a.json  62596f1fad75.json  798d89ebfc1f.json  7bbc3ac59718.json  7f660f7f2cb7.json  80bb7fa3dd58.json  88c52e5d2f06.json  8996f7faa3fd.json  8b795e33bfd0.json  8f49e51a45a0.json  9cd220d21462.json  a0d3cdefa1b5.json  ac08fc6989f8.json  ace212d0fc20.json  ad8b63a6fec2.json  afb61171b561.json  b660b987c029.json  b6e85483ba2b.json  b860a5a50d7f.json  c92279048cad.json  (+15 more)
archive/: docker-compose.v3.yml  docker-compose.yml.20260309_173048.bak  enhanced_mcp_server.py  enhanced_mcp_server_v2.py  mcp_config.json.20260309_173046.bak  mcp_config.json.20260309_173048.bak
data/: mcp_config.json  mcp_health_report.json  skill_registry.db  skill_registry.json  skill_registry.sql  skills_backlog.json  temp_candidate_identifier.pl  temp_trust_scorer.pl
deploy/: docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE_V3.md  ENHANCED_MCP_SERVER_V3_SUMMARY.md  GITHUB_SYNC_GUIDE.md  IAC_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_GUIDE.md  MCP_CLIENT_SUMMARY.md  MULTI_SURFACE.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_2_DYNAMIC_LAZY_LOADING_SUMMARY.md  PHASE_3_CONTEXT_HUB_SUMMARY.md  README.md  README_ENHANCED_MCP.md  README_WATCHDOG.md  Repository_Fixes_Walkthrough.md  Skill_Module_Diagnostic_Fixes.md  TEST_FIX_SUMMARY.md  WATCHDOG_IMPLEMENTATION_SUMMARY.md  final_compliance_report.txt  implementation_plan.md  index_output.txt  sync_mcp_config_tool.md  task.md  walkthrough.md
domains/: DEMO.md  SKILL_INDEX.md  distributed_systems_skills.json  distributed_systems_validation.md  performance_benchmarks.md  ralph_dump.md  top_3_ideas.md  usage_examples.md
experiment_results/: experiment_summary.json
logs/: metrics.jsonl  usage_log.jsonl
missions/: quantum_optimizer_mission.py
models/: integrated_test_skill_model.pkl  integrated_test_skill_scaler.pkl  skill_24_model.pkl  test_skill_ml_scaler.pkl
scripts/: analyze_backlog.py  apply_enrichment.py  assess_value.py  batch_enrich.py  batch_generate_skills.py  batch_implement_backlog.py  check_metadata.py  check_schema.py  clean_backlog.py  create_ml_ai_skills.py  diagnostic.py  diagnostic_v2.py  evolution_cli.py  find_orphaned_skills.py  fix_imports.py  fix_missing_imports.py  fix_no_invoke.py  fix_sync_invoke.py  migrate_registry.py  run_tests.py  scaffold_skill.py  start_watchdog.sh  sync_to_github.py  test_new_skills.py  validate_skill.py
src/: skill_indexer.py
test_models/: usage_prediction_model.pkl
tests/: fixtures.py  test_actual_iac_loop.py  test_claude_code_skills.py  test_claw_code_skills.py  test_core_modules.py  test_discovery_health.py  test_dynamic_lazy_loading.py  test_enhanced_mcp.py  test_enhanced_mcp_server_v3.py  test_enhanced_mcp_simple.py  test_enhanced_server.py  test_evolution_integration.py  test_exceptions.py  test_iac_loop.py  test_iac_simple.py  test_mcp_server_fix.py  test_minimal_server.py  test_monitoring_extended.py  test_performance_improvements.py  test_phase3_advanced_features.py  test_resilience.py  test_simple_server.py  test_sync_tool.py  test_ux_mobile_idle_wake.py  test_watchdog.py
(+3262 files in other folders)
