[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-flywheel"
version = "0.1.0"
description = "AI-powered skill orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Skill Flywheel Team"}
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.17",
    "langchain-core>=0.3.33",
    "langchain-openai>=1.0.0",
    "langgraph>=0.2.62",
    # "crewai>=0.10.0",  # Optional - can cause build issues
    # "crewai-tools>=0.14.0",
    "docker>=7.1.0",
    "psutil>=6.0.0",
    "GPUtil>=1.4.0",
    "prometheus-client>=0.20.0",
    "pybreaker>=1.4.1",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "numpy>=1.26.0,<2.4.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "jinja2>=3.1.6",
    "aiofiles>=23.2.1",
    "httpx>=0.28.1",
    "aiohttp>=3.9.5",
    "requests>=2.32.3",
    "dataclasses-json>=0.6.7",
    "python-dateutil>=2.9.0",
    "cryptography>=42.0.8",
    "pyjwt>=2.8.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.7",
    "mypy>=1.14.1",
    "safety>=3.2.8",
    "bandit>=1.8.3",
]
memory = [
    # "memtext>=0.6.0",  # Not available on PyPI - memtext is a CLI tool, not a Python package
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
targets = ["src"]
exclude = ["tests/", ".venv/", "*/test_*"]
detail = true

[tool.bandit.messages]
desc = "Bandit security warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = \"--cov=src.flywheel --cov-report=term-missing\"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
